welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: value update is not a member of String
		if (litMessage() = "R") {droite();avance()};
                    ^BDRBuggle:8: error: value update is not a member of String
		if (litMessage() = "L") {gauche();avance()};
                    ^BDRBuggle:9: error: value update is not a member of String
		if (litMessage() = "I") {gauche();gauche();avance()};
                    ^BDRBuggle:10: error: value update is not a member of String
		if (litMessage() = "A") {avance()};
                    ^BDRBuggle:11: error: value update is not a member of String
		if (litMessage() = "B") {avance();avance()};
                    ^BDRBuggle:12: error: value update is not a member of String
		if (litMessage() = "C") {avance();avance();avance()};
                    ^BDRBuggle:13: error: value update is not a member of String
		if (litMessage() = "Z") {recule()};
                    ^BDRBuggle:14: error: value update is not a member of String
		if (litMessage() = "Y") {recule();recule()};
                    ^BDRBuggle:15: error: value update is not a member of String
		if (litMessage() = "X") {recule();recule();recule()};
                    ^